[gd_scene load_steps=11 format=3 uid="uid://be3ml7efg7568"]

[ext_resource type="Script" path="res://scenes/Background.gd" id="1_5afwl"]
[ext_resource type="Shader" path="res://scenes/wall_bg.gdshader" id="1_lt5r1"]
[ext_resource type="Texture2D" uid="uid://68htqpfo70lu" path="res://scenes/ROCKS WALLPAPER.jpeg" id="3_uhfxr"]
[ext_resource type="Texture2D" uid="uid://c63him66v8lho" path="res://Lava B.jpg" id="4_lmrhv"]
[ext_resource type="Script" path="res://scenes/wall_img.gd" id="4_qb60b"]
[ext_resource type="Texture2D" uid="uid://nuj2a5n2fvn4" path="res://assets/Ice Wallpaper 2.png" id="5_av1f8"]
[ext_resource type="FontFile" uid="uid://b2clys7lbyd3t" path="res://scenes/Kid Games.ttf" id="5_b7862"]
[ext_resource type="Texture2D" uid="uid://pbk1y8agfh5" path="res://assets/796.jpg" id="8_h5esd"]
[ext_resource type="AudioStream" uid="uid://b3ag5y7cfsilm" path="res://beep-warning-6387.mp3" id="9_ahbux"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_c1xl2"]
shader = ExtResource("1_lt5r1")
shader_parameter/scroll_speed = 0.3

[node name="Bacground" type="Node2D"]
script = ExtResource("1_5afwl")

[node name="WallImg" type="Sprite2D" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_c1xl2")
position = Vector2(228, 449)
scale = Vector2(0.862772, 1.07423)
texture = ExtResource("3_uhfxr")
script = ExtResource("4_qb60b")

[node name="WallImg2" type="Sprite2D" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_c1xl2")
position = Vector2(242, 422.5)
scale = Vector2(1, 1.08009)
texture = ExtResource("4_lmrhv")

[node name="WallImg5" type="Sprite2D" parent="."]
visible = false
texture_repeat = 2
material = SubResource("ShaderMaterial_c1xl2")
position = Vector2(242, 422.5)
scale = Vector2(1, 1.08009)
texture = ExtResource("5_av1f8")

[node name="WallImg3" type="Sprite2D" parent="."]
visible = false
texture_repeat = 2
material = SubResource("ShaderMaterial_c1xl2")
position = Vector2(242, 427)
texture = ExtResource("4_lmrhv")

[node name="WallImg4" type="Sprite2D" parent="."]
visible = false
texture_repeat = 2
material = SubResource("ShaderMaterial_c1xl2")
position = Vector2(242, 427)
texture = ExtResource("4_lmrhv")

[node name="WarningLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -1.0
offset_top = 134.0
offset_right = 480.0
offset_bottom = 263.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.941176, 0.172549, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/line_spacing = 4
theme_override_constants/outline_size = 19
theme_override_fonts/font = ExtResource("5_b7862")
theme_override_font_sizes/font_size = 66
text = "DANGER
AHEAD"
horizontal_alignment = 1

[node name="Lava" type="Label" parent="."]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -1.0
offset_top = 291.0
offset_right = 480.0
offset_bottom = 457.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0.823529, 0.188235, 0.223529, 1)
theme_override_constants/line_spacing = 4
theme_override_constants/outline_size = 22
theme_override_fonts/font = ExtResource("5_b7862")
theme_override_font_sizes/font_size = 77
text = "WARNING
LAVA"
horizontal_alignment = 1

[node name="CanvasModulate" type="CanvasModulate" parent="."]
visible = false
position = Vector2(9, 15)
color = Color(0.347817, 0.347817, 0.347817, 1)

[node name="PointLight2D" type="PointLight2D" parent="."]
visible = false
position = Vector2(238.5, 553.5)
scale = Vector2(7.0625, 16.8625)
texture = ExtResource("8_h5esd")
texture_scale = 0.01

[node name="WarningSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_ahbux")
volume_db = 2.0
